2003-02-06  Andreas Kupries  <andreask@activestate.com>

	* tclconfig/tcl.m4: Added SC_TCL_EARLY_FLAGS and
	* configure.in:     SC_TCL64BIT_FLAGS, copied from the Tcl
	* configure:        configuration. Usage prevents mismatch
	                    between tcl core and tclvfs with regard
			    to the selected types for wide integer
			    and Tcl_StatBuf. Regenerated configure.

2003-02-04  Vince Darley <vincentdarley@sourceforge.net>

	* doc/vfs.n: 
	* doc/vfslib.n: update docs to reflect last six months
	of changes.
	
2003-02-04  Andreas Kupries  <andreask@activestate.com>

	* library/mk4vfs.tcl: Fixed bad vfs::mk4::Mount change.

2003-02-04  Vince Darley <vincentdarley@sourceforge.net>

	* generic/vfs.c: fixed version of VfsFullyNormalizePath,
	should resolve some problems with symlinks. Tcl really needs
	a 'file normalized -full' and equivalent C api.
	
2003-02-04  Vince Darley <vincentdarley@sourceforge.net>

	* tests/*.test: cleanup
	
	Also updated version of the package to 1.2 (not 1.1 since there's
	a Windows binary floating around with that number, and we want to
	avoid confusion).  It's been fixed at 1.0 for far too long.
	
2003-02-01  Jean-Claude Wippler  <jcw@equi4.com>

	* library/mk4vfs.tcl:  fixed bad mk4vfs::_umount change

2003-02-01  Jean-Claude Wippler  <jcw@equi4.com>

	* library/pkgIndex.tcl.in: mk4vfs 1.8, starkit 1.1, vfslib 1.3.1
	* library/pkgIndex.tcl: (shouldn't this be dropped from CVS now?)
	* library/mk4vfs.tcl:  updated from tclkit project
	* library/starkit.tcl: updated from tclkit project
	* library/vfslib.tcl:  updated from tclkit project

2003-01-30  Jeff Hobbs  <jeffh@ActiveState.com>

	* Makefile.in: only install pkgIndex.tcl for shared builds

2003-01-29  Jeff Hobbs  <jeffh@ActiveState.com>

	* library/pkgIndex.tcl.in (new):
	* library/pkgIndex.tcl: Replace pkgIndex.tcl with one that is
	* configure:            generated by configure to include the right
	* configure.in:         vfs dll name.  Left the old one for